--- a/instagram-app/src/components/CommentSection/CommentSection.css
+++ b/instagram-app/src/components/CommentSection/CommentSection.css
@@ -4,12 +4,16 @@
 }
 
 .comment {
-    padding: 5px;
+    padding: 8px 15px;
 }
 
 .comment-user-name {
     font-weight: bold;
     padding-right: 10px;
+}
+
+.comment-user-name:hover {
+    cursor: pointer;
 }
 
 .comment-content {
@@ -18,14 +22,33 @@
 
 .timestamp {
     color: silver;
-    padding: 10px;
+    padding: 10px 15px;
+    font-size: .8rem;
+}
+
+.add-comment-section {
+    display: flex;
 }
 
 .add-comment {
-    width: 98%;
+    width: 640px;
     height: 75px;
     border: 0px solid;
-    margin: 0 auto;
+    padding: 10px 15px;
+    font-size: 1rem;
+}
+
+.fa-ellipsis-h {
+    font-size: 2rem;
+}
+
+.fa-ellipsis-h:hover {
+    cursor: pointer;
+}
+
+.comment-btn {
+    background: transparent;
+    border: 1px solid white;
 }
 
 input:focus{
@@ -33,6 +56,7 @@ input:focus{
 }
 
 hr {
-    color: silver;
-    width: 98%;
+    color: rgb(199, 198, 198);
+    width: 96%;
+    margin: 0 auto;
 }
