--- a/instagram-app/src/components/PostContainer/PostContainer.css
+++ b/instagram-app/src/components/PostContainer/PostContainer.css
@@ -14,8 +14,8 @@
 }
 
 .thumbnail-img {
-    width: 50px;
-    height: 50px;
+    width: 75px;
+    height: 75px;
     border-radius: 50%;
     padding: 15px;
 }
@@ -26,13 +26,17 @@
     letter-spacing: .5px;
 }
 
+.users-name:hover {
+    cursor: pointer;
+}
+
 .post-image {
     width: 99%;
     margin: 0 auto;
 }
 
 .likes {
-    padding: 5px;
+    padding-left: 15px;
     font-weight: bold;
 }
 
