IT'S WORKINGgit status! Comments are adding and broke comments into their own component

--- a/instagram-app/src/components/SearchBar/SearchBar.css
+++ b/instagram-app/src/components/SearchBar/SearchBar.css
@@ -33,6 +33,7 @@ h1::before {
     border-radius: 3px;
     border: 1px solid silver;
     text-align: center;
+    font-family: 'Roboto', sans-serif;
 }
 
 .header-icons {
