--- a/instagram-app/src/App.css
+++ b/instagram-app/src/App.css
@@ -1,5 +1,12 @@
 .App {
-  width: 700px;
+  min-width: 1200px;
   height: auto;
 }
 
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  padding-top: 75px;
+}
