--- a/instagram-app/src/components/CommentSection/CommentSection.css
+++ b/instagram-app/src/components/CommentSection/CommentSection.css
@@ -31,11 +31,11 @@
 }
 
 .add-comment {
-    width: 640px;
-    height: 75px;
+    width: 85%;
+    height: 60px;
     border: 0px solid;
     padding: 10px 15px;
-    font-size: 1rem;
+    font-size: 0.8rem;
 }
 
 .fa-ellipsis-h {
