--- a/instagram-app/src/components/PostContainer/PostContainer.css
+++ b/instagram-app/src/components/PostContainer/PostContainer.css
@@ -1,16 +1,17 @@
 .card {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     font-family: 'Roboto', sans-serif;
     border: 1px solid silver;
     box-shadow: 0 0 8px silver;
-    margin-bottom: 20px;
-    margin-top: 20px;
+    margin: 20px;
+    width: 300px;
+    height: auto;
 }
 
 .post-header {
     display: flex;
+    width: 85%;
 }
 
 .thumbnail-img {
@@ -18,6 +19,7 @@
     height: 75px;
     border-radius: 50%;
     padding: 15px;
+    margin-right: 10px;
 }
 
 .users-name{
@@ -31,7 +33,7 @@
 }
 
 .post-image {
-    width: 99%;
+    width: 98%;
     margin: 0 auto;
 }
 
