--- a/instagram-app/src/components/SearchBar/SearchBar.css
+++ b/instagram-app/src/components/SearchBar/SearchBar.css
@@ -3,6 +3,10 @@
     justify-content: space-between;
     align-items: center;
     height: 50px;
+    width: 1200px;
+    min-width: 1200px;
+    position: fixed;
+    background: white;
 }
 
 .logo-title {
@@ -29,7 +33,7 @@ h1::before {
 }
 
 .input {
-    height: 50%;
+    height: 25px;
     border-radius: 3px;
     border: 1px solid silver;
     text-align: center;
