step 1 day 3 task completed, refactored app.js and broke into postspage component

--- a/instagram-app/src/components/PostContainer/PostContainer.css
+++ b/instagram-app/src/components/PostContainer/PostContainer.css
@@ -41,6 +41,10 @@
     font-weight: bold;
 }
 
+.clicked {
+    color: pink !important;
+}
+
 .card .fa-heart, 
 .card .fa-comment {
     color: gray;
