--- a/instagram-app/src/components/Authentication/LoginPage.css
+++ b/instagram-app/src/components/Authentication/LoginPage.css
@@ -38,6 +38,7 @@
     border-top-left-radius: 8px;
     border-bottom-right-radius: 8px;
     border: 1px solid silver;
+    box-shadow: 0 0 8px silver;
     text-align: center;
     font-size: 1rem;
 }
